--- a/src/ChatBundle/Resources/views/Default/index.html.twig
+++ b/src/ChatBundle/Resources/views/Default/index.html.twig
@@ -15,7 +15,7 @@
     <div id="sidepanel">
         <div id="profile">
             <div class="wrap">
-                <img id="profile-img" src="http://emilcarlsson.se/assets/mikeross.png" class="online" alt="" />
+                <img id="profile-img" src="https://img.icons8.com/bubbles/2x/administrator-male.png" class="online" alt="" />
                 <p>Mike Ross</p>
             </div>
         </div>
@@ -23,61 +23,47 @@
             <label for=""><i class="fa fa-search" aria-hidden="true"></i></label>
             <input type="text" placeholder="Search contacts..." />
         </div>
-        <div id="contacts">
-            <ul>
 
-                <li class="contact active">
+        <div id="contacts" onclick="lodMessages()">
+            <ul>
+                {% for i in disc %}
+                {% if i != app.user %}
+                <li class="contact">
                     <div class="wrap">
                         <span class="contact-status online"></span>
-                        <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
+                        <img src="https://img.icons8.com/bubbles/2x/administrator-male.png" alt="" />
                         <div class="meta">
-                            <p class="name">Harvey Specter</p>
+                            <p class="name">{{ i }}</p>
                             <p class="preview">Wrong. You take the gun, or you pull out a bigger one. Or, you call their bluff. Or, you do any one of a hundred and forty six other things.</p>
                         </div>
                     </div>
                 </li>
+                {% endif %}
+                {% endfor %}
             </ul>
         </div>
     </div>
     <div class="content">
         <div class="contact-profile">
-            <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
+            <img src="https://img.icons8.com/bubbles/2x/administrator-male.png" alt="" />
             <p>Harvey Specter</p>
         </div>
         <div class="messages">
             <ul>
+             {% for j in messages %}
+             {% if j.sender == app.user %}
                 <li class="sent">
-                    <img src="http://emilcarlsson.se/assets/mikeross.png" alt="" />
-                    <p>How the hell am I supposed to get a jury to believe you when I am not even sure that I do?!</p>
+                    <img src="https://img.icons8.com/bubbles/2x/administrator-male.png" alt="" />
+                    <p>{{ j.body }}</p>
                 </li>
+             {% endif %}
+             {% if j.sender != app.user %}
                 <li class="replies">
-                    <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-                    <p>When you're backed against the wall, break the god damn thing down.</p>
+                    <img src="https://img.icons8.com/bubbles/2x/administrator-male.png" alt="" />
+                    <p>{{ j.body }}</p>
                 </li>
-                <li class="replies">
-                    <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-                    <p>Excuses don't win championships.</p>
-                </li>
-                <li class="sent">
-                    <img src="http://emilcarlsson.se/assets/mikeross.png" alt="" />
-                    <p>Oh yeah, did Michael Jordan tell you that?</p>
-                </li>
-                <li class="replies">
-                    <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-                    <p>No, I told him that.</p>
-                </li>
-                <li class="replies">
-                    <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-                    <p>What are your choices when someone puts a gun to your head?</p>
-                </li>
-                <li class="sent">
-                    <img src="http://emilcarlsson.se/assets/mikeross.png" alt="" />
-                    <p>What are you talking about? You do what they say or they shoot you.</p>
-                </li>
-                <li class="replies">
-                    <img src="http://emilcarlsson.se/assets/harveyspecter.png" alt="" />
-                    <p>Wrong. You take the gun, or you pull out a bigger one. Or, you call their bluff. Or, you do any one of a hundred and forty six other things.</p>
-                </li>
+             {% endif %}
+             {% endfor %}
             </ul>
         </div>
         <div class="message-input">
