--- a/src/BlogBundle/Resources/views/BlogViews/Blog.html.twig
+++ b/src/BlogBundle/Resources/views/BlogViews/Blog.html.twig
@@ -66,7 +66,7 @@
 
                                 {% if app.user!=null %}
                                 {% if app.user.id==blogposts.author.id %}
-                                <a href="{{ path('blog_delete',{('postId'):blogposts.postId}) }}" class="delete"><i class="fas fa-trash-alt" data-toggle="tooltip" title="Delete"></i></a>
+                                <a href="{{ path('blog_delete',{('postId'):blogposts.postId}) }}" class="delete" onclick="return confirm('Are you sure')"><i class="fas fa-trash-alt" data-toggle="tooltip" title="Delete"></i></a>
 
                                 <a href="{{ path('Update_BlogPost',{('postId'):blogposts.postId}) }}"><i class="fas fa-edit" data-toggle="tooltip" title="Edit"></i></a>
                                 {% endif %}
@@ -217,6 +217,7 @@
 
 
                         <!-- Pagination -->
+
 
                         <div class="pagination flex-l-m flex-w m-l--6 p-t-25">
                             {{ pagination(v, 'page') }}
