--- a/src/BlogBundle/Resources/views/BlogViews/notification.html.twig
+++ b/src/BlogBundle/Resources/views/BlogViews/notification.html.twig
@@ -46,7 +46,7 @@
 
         /* THE NOTIFICAIONS WINDOW. THIS REMAINS HIDDEN WHEN THE PAGE LOADS. */
         #notifications {
-            display:none;
+           /* display:none;*/
             width:430px;
             position:absolute;
             top:30px;
