--- a/src/AdminBundle/Resources/views/AdminBlogViews/ListPosts.html.twig
+++ b/src/AdminBundle/Resources/views/AdminBlogViews/ListPosts.html.twig
@@ -42,7 +42,7 @@
                     <td>
                         <a href="{{ path('Admin_DetailPost',{('postId'):blogposts.postId}) }}" class="view" title="View" data-toggle="tooltip"><i class="tim-icons icon-notes"></i></a>
                         <a href="{{ path('Admin_UpdatePost',{('postId'):blogposts.postId}) }}" class="edit"><i class="tim-icons icon-pencil" data-toggle="tooltip" title="Edit"></i></a>
-                        <a href="{{ path('Admin_deletePost',{('postId'):blogposts.postId}) }}" class="delete"><i class="tim-icons icon-trash-simple" data-toggle="tooltip" title="Delete"></i></a>
+                        <a href="{{ path('Admin_deletePost',{('postId'):blogposts.postId}) }}" class="delete" onclick="return confirm('Are you sure')"><i class="tim-icons icon-trash-simple" data-toggle="tooltip" title="Delete"></i></a>
                     </td>
                 </tr>
                     <div id="deleteEmployeeModal" class="modal fade">
