--- a/src/BlogBundle/Resources/views/BlogViews/BlogManagment.html.twig
+++ b/src/BlogBundle/Resources/views/BlogViews/BlogManagment.html.twig
@@ -266,7 +266,7 @@
 
                                                 <div class="footer">
                                                     <center>
-                                                    <a href="{{ path('blog_delete',{('postId'):blogposts.postId}) }}" class="delete"><i class="fas fa-trash-alt" data-toggle="tooltip" title="Delete" style="color: darkred"></i></a>
+                                                    <a href="{{ path('blog_delete',{('postId'):blogposts.postId}) }}" class="delete" onclick="return confirm('Are you sure')"><i class="fas fa-trash-alt" data-toggle="tooltip" title="Delete" style="color: darkred"></i></a>
 
                                                     <a href="{{ path('Update_BlogPost',{('postId'):blogposts.postId}) }}"><i class="fas fa-edit" data-toggle="tooltip" title="Edit"style="color: green"></i></a>
                                                     </center> </div>
