--- a/src/BlogBundle/Resources/views/BlogViews/DetailBlog.html.twig
+++ b/src/BlogBundle/Resources/views/BlogViews/DetailBlog.html.twig
@@ -134,7 +134,7 @@
                                                             </div>
                                                         </div>
                                                         <div class="right">
-                                                        <a href="#myModal" class="delete" data-toggle="modal"><i class="fas fa-trash-alt" data-toggle="tooltip" title="Delete"></i></a>
+                                                        <a href="{{ path('blog_deleteComment',{('commentId'):comments.commentId}) }}" class="delete" onclick="return confirm('Are you sure')"><i class="fas fa-trash-alt" data-toggle="tooltip" title="Delete"></i></a>
 
                                                         <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fas fa-edit" data-toggle="tooltip" title="Edit"></i></a>
                                                         </div>
