--- a/src/BlogBundle/Resources/views/BlogViews/BlogManagment.html.twig
+++ b/src/BlogBundle/Resources/views/BlogViews/BlogManagment.html.twig
@@ -60,9 +60,9 @@
                         <br>
 
                 {% if profit==null %}
-                        <center><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                        <center><a href="{{ path('blog_Profits') }}" type="button" class="btn btn-primary">
                     <i class="fas fa-money-check-alt">  Ask For Your Money</i>
-                        </button></center>
+                        </a></center>
 
                         <!-- The Modal -->
                         <div class="modal fade" id="myModal">
