--- a/src/AdminBundle/Resources/views/AdminBlogViews/ListComments.html.twig
+++ b/src/AdminBundle/Resources/views/AdminBlogViews/ListComments.html.twig
@@ -12,7 +12,7 @@
 
                 </div>
             </div>
-            <table class="table table-striped table-hover">
+            <table class="table table-striped table-hover" id="myTable">
                 <thead>
                 <tr>
 
