--- a/src/AdminBundle/Resources/views/AdminBlogViews/ListBlogPayment.html.twig
+++ b/src/AdminBundle/Resources/views/AdminBlogViews/ListBlogPayment.html.twig
@@ -8,7 +8,7 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <h2>Manage <b>Payments</b></h2>
-                        <input type="text" id="myInput" class="search form-control" placeholder="What you looking for?">                    </div>
+                                           </div>
                     <div class="col-sm-6">
 
                     </div>
