--- a/src/AdminBundle/Resources/views/AdminBlogViews/ListPosts.html.twig
+++ b/src/AdminBundle/Resources/views/AdminBlogViews/ListPosts.html.twig
@@ -7,8 +7,7 @@
             <div class="table-title">
                 <div class="row">
                     <div class="col-sm-6">
-                        <h2>Manage <b>Posts</b></h2>
-                        <input type="text" id="myInput" class="search form-control" placeholder="What you looking for?">                    </div>
+                        <h2>Manage <b>Posts</b></h2></div>
                     <div class="col-sm-6">
 
                         <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="tim-icons icon-simple-add"></i>     Add Admin Post</a>
