--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -25,7 +25,7 @@
                     </div>
                 </div>
 
-                <div class="item-slick1 item2-slick1" style="background-image: url({{ asset('assets/images/mike.jpg') }});">
+                <div class="item-slick1 item2-slick1" style="background-image: url({{ asset('assets/images/mike.jpeg') }});">
                     <div class="wrap-content-slide1 sizefull flex-col-c-m p-l-15 p-r-15 p-t-150 p-b-170">
 						<span class="caption1-slide1 txt1 t-center animated visible-false m-b-15" data-appear="rollIn">
 							Welcome to
@@ -105,7 +105,7 @@
 
     <!-- Intro -->
     <section class="section-intro">
-        <div class="header-intro parallax100 t-center p-t-135 p-b-158" style="background-image: url({{ asset('assets/images/bg-intro-01.jpg') }});">
+        <div class="header-intro parallax100 t-center p-t-135 p-b-158" style="background-image: url({{ asset('assets/images/images.jpg') }});">
 			<span class="tit2 p-l-15 p-r-15">
 				Discover
 			</span>
@@ -705,14 +705,14 @@
 
 
     <!-- Video -->
-    <section class="section-video parallax100" style="background-image: url({{ asset('assets/images/bg-cover-video-02.jpg') }});">
+    <section class="section-video parallax100" style="background-image: url({{ asset('assets/images/video.jpg') }});">
         <div class="content-video t-center p-t-225 p-b-250">
 			<span class="tit2 p-l-15 p-r-15">
-				Discover
+				Why
 			</span>
 
             <h3 class="tit4 t-center p-l-15 p-r-15 p-t-3">
-                Our Video
+                Choosing Freelance?
             </h3>
 
             <div class="btn-play ab-center size16 hov-pointer m-l-r-auto m-t-43 m-b-33" data-toggle="modal" data-target="#modal-video-01">
@@ -804,7 +804,7 @@
             <div class="wrap-video-mo-01">
                 <div class="w-full wrap-pic-w op-0-0"><img src="{{ asset('assets/images/icons/video-16-9.jpg') }}" alt="IMG"></div>
                 <div class="video-mo-01">
-                    <iframe src="https://www.youtube.com/embed/5k1hSu2gdKE?rel=0&amp;showinfo=0" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/p0SgEDEpvAE?rel=0&amp;showinfo=0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
