--- a/src/BlogBundle/Resources/views/BlogViews/Blog.html.twig
+++ b/src/BlogBundle/Resources/views/BlogViews/Blog.html.twig
@@ -253,7 +253,8 @@
                                             <div class="modal-body">
                                                 <div class="form-group">
                                                     <label>Post Content</label>
-                                                    {{ form_widget(form.postContent, { 'attr': {'class': 'form-control', 'type' : 'textarea'} }) }}
+                                                    {{ form_widget(form.postContent, { 'attr': {'class': 'form-control', 'type' : 'textarea','onkeyup' : 'countTextAreaChar(this, 60)', 'id': 'smallword'} }) }}
+                                                    <div id="charNum"></div>
 
                                                 </div>
                                                 <div class="form-group">
@@ -263,12 +264,15 @@
                                                 </div>
                                                 <div class="form-group">
                                                     <label>Article Title</label>
-                                                    {{ form_widget(form.articleTitle, { 'attr': {'class': 'form-control', 'type' : 'textarea'} }) }}
+                                                    {{ form_widget(form.articleTitle, { 'attr': {'class': 'form-control', 'type' : 'textarea','onkeyup' : 'countTextAreaCharS(this, 60)', 'id': 'smallwordS'} }) }}
+                                                    <div id="charNumS"></div>
+
 
                                                 </div>
                                                 <div class="form-group">
                                                     <label>Article Content</label>
-                                                    {{ form_widget(form.articleContent)}}
+                                                    {{ form_widget(form.articleContent,{'attr':{'onkeyup':'countTextAreaCharT(this, 60)','id':'swallowordT'} }) }}
+                                                    <div id="charNumT"></div>
 
                                                 </div>
                                                 <div class="form-group">
@@ -407,10 +411,19 @@
     <script src="//cdn.ckeditor.com/4.11.3/full/ckeditor.js"></script><script>
     CKEDITOR.replace('editor1');
 </script>
-
+    <script>
+        $(function(){
+            $('#posti').keyup(function(){
+                var charsno = $(this).val().length;
+                $('#char_namb').html("500 : " + charsno);
+            });
+        });
+    </script>
 
 
 {% endblock %}
+
+
 
 
 
