--- a/src/ComplaintsBundle/Resources/views/Default/index.html.twig
+++ b/src/ComplaintsBundle/Resources/views/Default/index.html.twig
@@ -1,7 +1,7 @@
 {% extends "SmartStartBase.html.twig" %}
 {% block title %}Complaints{% endblock %}
 {% block body %}
-<body class="animsition">
+<body class="animsition" onload="GetMap()">
 
 <!-- Contact form -->
 <section class="section-contact bg1-pattern p-t-90 p-b-113">
@@ -38,8 +38,10 @@
 						</span>
 
                     <div class="wrap-inputemail size12 bo2 bo-rad-10 m-t-3 m-b-23">
-                        <input class="bo-rad-10 sizefull txt10 p-l-20" type="email" onblur="validMail()" name="email" id="email" placeholder="Email">
+                        <input class="bo-rad-10 sizefull txt10 p-l-20" type="email" name="email" id="email" placeholder="Email">
+                    <div id="error1" class="help-block" role="alert" style="color: red"></div>
                     </div>
+
                 </div>
 
                 <div class="col-md-4">
@@ -63,8 +65,8 @@
                     <span class="txt9">
 							Message
 						</span>
-                    <textarea class="bo-rad-10 size35 bo2 txt10 p-l-20 p-t-15 m-b-10 m-t-3" onblur="validMessage()" name="message" placeholder="Message" id="message"></textarea>
-                    <label name="erreur" id="erreur" hidden>erreur de saisie</label>
+                    <textarea class="bo-rad-10 size35 bo2 txt10 p-l-20 p-t-15 m-b-10 m-t-3" name="message" placeholder="Message" id="message"></textarea>
+                    <div id="error2" class="help-block" role="alert" style="color: red"></div>
                 </div>
             </div>
 
@@ -77,5 +79,57 @@
         </form>
     </div>
 </section>
-<script src="{{ asset('assets/js/complaints.js') }}"></script>
+<script type="text/javascript">
+document.getElementById('email').addEventListener('change',function () {
+    var erro1=document.getElementById('error1');
+    var re=new RegExp('^[a-zA-Z0-9_.-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-.]+$');
+    if(document.getElementById('email').value.match(re)==false)
+    {
+        erro1.textContent="Please enter a valid email";
+        document.getElementById('addForm').classList.add('has-error');
+        document.getElementById('valider').setAttribute("disabled",null);
+    }
+    else
+    {
+        error1.textContent='';
+        document.getElementById('addForm').classList.remove('has-error');
+        if((document.getElementById('email').value !="")&&(document.getElementById('message').value !=""))
+        {
+            document.getElementById('valider').removeAttribute("disabled");
+
+        }
+        else{
+            document.getElementById('valider').setAttribute("disabled",null);
+        }
+    }
+
+});
+
+document.getElementById('message').addEventListener('change',function () {
+    var erro2=document.getElementById('error2');
+    if(document.getElementById('message').value=="")
+    {
+        erro2.textContent="the field message can not be empty";
+        document.getElementById('addForm').classList.add('has-error');
+        document.getElementById('valider').setAttribute("disabled",null);
+    }
+    else
+    {
+        error2.textContent='';
+        document.getElementById('addForm').classList.remove('has-error');
+        if((document.getElementById('email').value !="")&&(document.getElementById('message').value !=""))
+        {
+            document.getElementById('valider').removeAttribute("disabled");
+
+        }
+        else{
+            document.getElementById('valider').setAttribute("disabled",null);
+
+        }
+    }
+
+
+});
+
+</script>
 {% endblock %}
