--- a/src/FeedbackBundle/Resources/views/Default/index.html.twig
+++ b/src/FeedbackBundle/Resources/views/Default/index.html.twig
@@ -9,10 +9,13 @@
 
     <section>
         {% if app.user!=null %}
-            </div>
+
+
             <a href="#complaint" class="btn3 flex-c-m size13 txt11 trans-0-4 m-l-r-auto" data-toggle="modal"><i class="material-icons">&#xE147;</i> <span>Add Feedback</span></a>
 
             </div>
+
+
             <!-- Add Modal HTML -->
             <div id="complaint" class="modal fade">
                 <div class="modal-dialog">
@@ -22,31 +25,101 @@
                             <h4 class="modal-title">Add Feedback</h4>
                             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
                         </div>
+                        <form method="post" action="/SmartStartSymfony-master/web/app_dev.php/Feedback/home">
+
                         <div class="modal-body">
 
                             <div class="form-group" hidden>
                                 <label>Application</label>
                                 <input class="form-control" type="text" name="name" value="" disabled="disabled">
-
                             </div>
-                            <div class="form-group">
-                                <label>Rating</label>
-                                <input class="form-control" type="text" name="name" >
 
+                            <div class="modal-body align-items-center align-items-center text-center">
+                                <label style="display: flex">Rating</label>
+                                <fieldset class="rating">
+                                    <input type="radio" id="star5" name="rating" value="5" /><label class = "full" for="star5" title="Awesome - 5 stars"></label>
+                                    <input type="radio" id="star4half" name="rating" value="4.5" /><label class="half" for="star4half" title="Pretty good - 4.5 stars"></label>
+                                    <input type="radio" id="star4" name="rating" value="4" /><label class = "full" for="star4" title="Pretty good - 4 stars"></label>
+                                    <input type="radio" id="star3half" name="rating" value="3.5" /><label class="half" for="star3half" title="Meh - 3.5 stars"></label>
+                                    <input type="radio" id="star3" name="rating" value="3" /><label class = "full" for="star3" title="Meh - 3 stars"></label>
+                                    <input type="radio" id="star2half" name="rating" value="2.5" /><label class="half" for="star2half" title="Kinda bad - 2.5 stars"></label>
+                                    <input type="radio" id="star2" name="rating" value="2" /><label class = "full" for="star2" title="Kinda bad - 2 stars"></label>
+                                    <input type="radio" id="star1half" name="rating" value="1.5" /><label class="half" for="star1half" title="Meh - 1.5 stars"></label>
+                                    <input type="radio" id="star1" name="rating" value="1" /><label class = "full" for="star1" title="Sucks big time - 1 star"></label>
+                                    <input type="radio" id="starhalf" name="rating" value="0.5" /><label class="half" for="starhalf" title="Sucks big time - 0.5 stars"></label>
+                                </fieldset>
                             </div>
-                            <div class="form-group">
-                                <label>Comment</label>
-                                <textarea class="form-control" name="name" cols="10" rows="10" ></textarea>
+<br/>
+                            <div class="modal-body align-items-center align-items-center text-center">
+                                <label style="display:flex">Comment</label>
+                                <textarea class="form-control" name="comment" cols="10" rows="10" ></textarea>
+                            </div>
 
-                            </div>
                         </div>
+
                         <div class="modal-footer">
-                            <input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
+                            <input type="button" class="btn btn-success"  data-dismiss="modal" value="Cancel">
+                            {% if msg ==null %}
                             <input type="submit" onclick="ValidateEmail(email)" id="form" name="form" class="btn btn-success" id="addb" value="Add">
+                            {% endif %}
+                            {% if msg !=null %}
+                                <p class="btn btn-default" style="color: red"> U ALREADY MAKE A FEEDBACK ON THIS APP ! </p>
+                            {% endif %}
+
                         </div>
+
+                        </form>
                     </div>
                 </div>
             </div>
         {% endif %}
+
     </section>
+
+
+
+    <style>
+
+        fieldset, label { margin: 0; padding: 0; }
+        body{ margin: 20px; }
+        h1 { font-size: 1.5em; margin: 10px; }
+
+        /****** Style Star Rating Widget *****/
+
+        .rating {
+            border: none;
+            float: left;
+        }
+
+        .rating > input { display: none; }
+        .rating > label:before {
+            margin: 5px;
+            font-size: 2.75em;
+            font-family: FontAwesome;
+            display: inline-block;
+            content: "\f005";
+        }
+
+        .rating > .half:before {
+            content: "\f089";
+            position: absolute;
+        }
+
+        .rating > label {
+            color: #ddd;
+            float: right;
+        }
+
+        /***** CSS Magic to Highlight Stars on Hover *****/
+
+        .rating > input:checked ~ label, /* show gold star when clicked */
+        .rating:not(:checked) > label:hover, /* hover current star */
+        .rating:not(:checked) > label:hover ~ label { color: #FFD700;  } /* hover previous stars in list */
+
+        .rating > input:checked + label:hover, /* hover current star when changing rating */
+        .rating > input:checked ~ label:hover,
+        .rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+        .rating > input:checked ~ label:hover ~ label { color: #FFED85;  }
+    </style>
+
 {% endblock %}
